@file:Suppress("UnstableApiUsage")

import java.net.URI
import java.net.http.HttpClient
import java.net.http.HttpRequest
import java.net.http.HttpResponse
import java.util.Base64
import org.gradle.api.publish.maven.tasks.PublishToMavenRepository

plugins {
    `java-library`
    `maven-publish`
    signing
    id("com.gradleup.shadow") version "9.4.0"
}

group = "org.jfxcore"
version = project.findProperty("TAG_VERSION_COMPILER") ?: "1.0-SNAPSHOT"

val signingKey: String? by project
val signingKeyName: String? by project
val signingPassword: String? by project
val repositoryUserName: String? by project
val repositoryPassword: String? by project

repositories {
    mavenCentral()
    maven(url = "https://plugins.gradle.org/m2/")
}

sourceSets {
    main {
        java.srcDir("${layout.buildDirectory.get()}/generated/java/main")
    }
}

dependencies {
    implementation("org.javassist:javassist:3.30.2-GA")
    implementation("org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.4.1")

    compileOnly("org.jetbrains:annotations:26.1.0")
    compileOnly("com.google.devtools.ksp:symbol-processing-api:2.3.6")
    compileOnly(files("${gradle.includedBuild("jfx").projectDir}/build/sdk/lib/javafx.base.jar"))
    compileOnly(files("${gradle.includedBuild("jfx").projectDir}/build/sdk/lib/javafx.graphics.jar"))
    compileOnly(files("${gradle.includedBuild("jfx").projectDir}/build/sdk/lib/javafx.controls.jar"))
}

testing {
    suites {
        val test by getting(JvmTestSuite::class) {
            useJUnitJupiter()

            dependencies {
                runtimeOnly("org.junit.platform:junit-platform-launcher")
                implementation("org.junit.jupiter:junit-jupiter:5.12.2")
                implementation(files("${gradle.includedBuild("markup").projectDir}/build/libs/markup-1.0-SNAPSHOT.jar"))
            }
        }

        register<JvmTestSuite>("compilerTest") {
            useJUnitJupiter()

            dependencies {
                implementation(project())
                implementation("org.junit.jupiter:junit-jupiter:5.12.2")
                runtimeOnly("org.junit.platform:junit-platform-launcher")

                implementation("org.testfx:testfx-junit5:4.0.16-alpha")
                implementation("org.testfx:openjfx-monocle:jdk-12.0.1+2")
                implementation(files("${gradle.includedBuild("markup").projectDir}/build/libs/markup-1.0-SNAPSHOT.jar"))
            }

            targets.all {
                testTask.configure {
                    maxParallelForks = (Runtime.getRuntime().availableProcessors() / 2).coerceAtLeast(1)
                    exclude("**/*\$__FX\$*.class")
                    shouldRunAfter(test)
                }
            }
        }
    }
}

configurations.named("testImplementation").configure {
    extendsFrom(configurations.implementation.get(), configurations.compileOnly.get())
}

configurations.named("compilerTestImplementation").configure {
    extendsFrom(configurations.implementation.get(), configurations.compileOnly.get())
}

java {
    withSourcesJar()
    withJavadocJar()
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

val copyVersionInfo = tasks.register<Copy>("copyVersionInfo") {
    from("$projectDir/src/main/version-info/VersionInfo.java")
    into("${layout.buildDirectory.get()}/generated/java/main/org/jfxcore/compiler")
    filter { it
        .replace("\${group}", project.group.toString())
        .replace("\${name}", project.name)
        .replace("\${version}", project.version.toString())
    }
}

tasks.compileJava {
    dependsOn(copyVersionInfo)
    dependsOn(gradle.includedBuild("jfx").task(":sdk"))
    dependsOn(gradle.includedBuild("markup").task(":jar"))
    options.release = 17
}

tasks.named<Jar>("sourcesJar") {
    dependsOn(copyVersionInfo)
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

tasks.withType<Javadoc> {
    val javadocOptions = options as CoreJavadocOptions
    javadocOptions.addStringOption("Xdoclint:none", "-quiet")
}

tasks.withType<Test> {
    useJUnitPlatform()
    jvmArgs("--enable-native-access=ALL-UNNAMED")
    systemProperty("prism.order", "sw")
    systemProperty("glass.platform", "Monocle")
    systemProperty("monocle.platform", "Headless")
    systemProperty("testfx.headless", "true")
    systemProperty("testfx.robot", "glass")
    systemProperty("headless.geometry", "640x480-32")
}

tasks.check {
    dependsOn(testing.suites.named("compilerTest"))
}

tasks.jar {
    archiveClassifier.set("test")
}

tasks.shadowJar {
    archiveClassifier.set("")
    include("*.jar")
    include("META-INF/services/**/*.*")
    include("org/jfxcore/**/*.*")
    include("kotlinx/**/*.*")
    include("javassist/**/*.*")
    relocate("javassist", "org.jfxcore.compiler.internal")
    relocate("kotlinx", "org.jfxcore.compiler.kotlinx")
    dependencies {
        exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib"))
        exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib-common"))
        exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib-jdk7"))
        exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib-jdk8"))
        exclude(dependency("org.jetbrains.kotlin:kotlin-reflect"))
    }
}

tasks.withType<GenerateModuleMetadata> {
    enabled = false
}

val mavenCentralFixup by tasks.registering {
    doLast {
        val url = project.property("REPOSITORY_POST_URL") as String
        val request = HttpRequest.newBuilder()
            .uri(URI.create(url))
            .header("Authorization", "Bearer ${Base64.getEncoder().encodeToString(
                "$repositoryUserName:$repositoryPassword".toByteArray(Charsets.UTF_8))}")
            .POST(HttpRequest.BodyPublishers.noBody())
            .build()

        logger.info("POST $url")

        HttpClient.newHttpClient().use {
            val response = it.send(request, HttpResponse.BodyHandlers.ofString())
            logger.info("Received status code: ${response.statusCode()}")
        }
    }
}

tasks.publish {
    finalizedBy(mavenCentralFixup)
}

publishing {
    publications {
        create<MavenPublication>("maven") {
            artifact(tasks.shadowJar)
            artifact(tasks["sourcesJar"])
            artifact(tasks["javadocJar"])
            pom {
                url.set("https://github.com/jfxcore/fxml-compiler")
                name.set("fxml-compiler")
                description.set("FXML/2 markup compiler")
                licenses {
                    license {
                        name.set("BSD-3-Clause")
                        url.set("https://opensource.org/licenses/BSD-3-Clause")
                    }
                }
                developers {
                    developer {
                        id.set("jfxcore")
                        name.set("JFXcore")
                        organization.set("JFXcore")
                        organizationUrl.set("https://github.com/jfxcore")
                    }
                }
                scm {
                    connection.set("scm:git:https://github.com/jfxcore/fxml-compiler.git")
                    developerConnection.set("scm:git:https://github.com/jfxcore/fxml-compiler.git")
                    url.set("https://github.com/jfxcore/fxml-compiler")
                }
            }
        }
    }
    repositories {
        maven {
            if (project.hasProperty("REPOSITORY_URL")) {
                credentials {
                    username = repositoryUserName
                    password = repositoryPassword
                }
                url = uri(project.property("REPOSITORY_URL") as String)
            }
        }
    }
}

signing {
    setRequired {
        gradle.taskGraph.allTasks.any { it is PublishToMavenRepository }
    }

    useInMemoryPgpKeys(signingKeyName, signingKey, signingPassword)
    sign(publishing.publications["maven"])
}
